updated java opts, delete ssm.